@@ -26,6 +26,8 @@ if (! check_acl ($config['id_user'], 0, "IR") == 1) {
 	require ("general/noaccess.php");
 	exit;
 }
+include_flash_chart_script();
+
 ui_print_page_header (__('Statistics'), "images/book_edit.png", false, "", false, "");
 
 echo '<table width="90%">
