@@ -1,3 +1,10 @@
+2011-08-11  Sergio Martin <sergio.martin@artica.es>
+
+	* include/functions_graph.php
+	operation/incidents/incident_statistics.php: Fixed flash graphs
+	into incidents statistics and added the group All to the Pie
+	by groups into incident statistics
+
 2011-08-11 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
 
 	* pandoradb.data.oracle.sql: Removed tskin data from this script.
